--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 </section>
 
 <section class="slide">
+    <h2>Generator</h2>
+
+    <ul>
+        <li>node >= 0.11 --harmony или --harmony-generators</li>
+        <li>TODO: поддержка браузеров</li>
+    </ul>
+</section>
+
+<section class="slide">
     <h2><small>Generator.</small> Declaration</h2>
     <pre class="javascript">
         <code>function <mark>*</mark>foo() {</code>
@@ -113,7 +122,7 @@
     <h2><small>Generator.</small> Receive data</h2>
     <pre class="javascript">
         <code>function *foo() {</code>
-        <code>    yield 'Some data';</code>
+        <code>    <mark>yield 'Some data';</mark></code>
         <code>}</code>
         <code> </code>
         <code>var it = foo();</code>
@@ -132,19 +141,98 @@
     <h2><small>Generator.</small> Send data</h2>
     <pre class="javascript">
         <code>function *foo() {</code>
-        <code>    var name = yield;</code>
+        <code>    var name = <mark>yield;</mark></code>
         <code>    console.log('Hello, ' + name);</code>
         <code>}</code>
         <code> </code>
         <code>var it = foo();</code>
         <code>it.next();</code>
-        <code>it.next('EkbJS');</code>
+        <code><mark>it.next('EkbJS');</mark></code>
     </pre>
 
     <div>
         <h3>Console:</h3>
         <pre>
             <code>&gt; Hello, EkbJS</code>
+        </pre>
+    </div>
+</section>
+
+<!-- Не забыть рассказать про приоритеты -->
+<section class="slide">
+    <h2><small>Generator.</small> Send data</h2>
+    <pre class="javascript">
+        <code>function *foo() {</code>
+        <code>    var name = <mark>'EkbJS';</mark></code>
+        <code>    console.log('Hello, ' + name);</code>
+        <code>}</code>
+        <code> </code>
+        <code>var it = foo();</code>
+        <code>it.next();</code>
+        <code><mark>it.next('EkbJS');</mark></code>
+    </pre>
+
+    <div>
+        <h3>Console:</h3>
+        <pre>
+            <code>&gt; Hello, EkbJS</code>
+        </pre>
+    </div>
+</section>
+
+<section class="slide">
+    <h2><small>Generator.</small> yield *</h2>
+    <pre class="javascript">
+        <code>function *foo() {</code>
+        <code>    yield 2;</code>
+        <code>    yield 3;</code>
+        <code>}</code>
+        <code> </code>
+        <code>function *bar() {</code>
+        <code>    yield 1;</code>
+        <code>    yield *foo();</code>
+        <code>}</code>
+        <code> </code>
+        <code>var it = bar();</code>
+        <code>console.log(it.next());</code>
+        <code>console.log(it.next());</code>
+        <code>console.log(it.next());</code>
+    </pre>
+
+    <div class="console_position" style="top: 464px">
+        <h3>Console:</h3>
+        <pre>
+            <code>&gt; {value: 1, done: false}</code>
+            <code>&gt; {value: 2, done: false}</code>
+            <code>&gt; {value: 3, done: false}</code>
+        </pre>
+    </div>
+</section>
+
+<section class="slide">
+    <h2><small>Generator.</small> yield *</h2>
+    <pre class="javascript">
+        <code>function *foo() {</code>
+        <code>    yield 2;</code>
+        <code>    yield 3;</code>
+        <code>}</code>
+        <code> </code>
+        <code>function *bar() {</code>
+        <code>    yield 1;</code>
+        <code>    yield *foo();</code>
+        <code>}</code>
+        <code> </code>
+        <code>for(var val of bar()) {</code>
+        <code>    console.log(val);</code>
+        <code>}</code>
+    </pre>
+
+    <div class="console_position" style="top: 464px">
+        <h3>Console:</h3>
+        <pre>
+            <code>&gt; 1</code>
+            <code>&gt; 2</code>
+            <code>&gt; 3</code>
         </pre>
     </div>
 </section>
