--- a/index.html
+++ b/index.html
@@ -237,6 +237,19 @@
     </div>
 </section>
 
+<section class="slide">
+    <h2><small>Асинхронность.</small> Задача</h2>
+    <h3>Неоплаченные штрафы</h3>
+    <ul>
+        <li>Ввести номер автомобиля и номер прав</li>
+        <li>Получить по номеру автомобиля список штрафов</li>
+        <li>Получить по номеру прав список штрафов</li>
+        <li>Объединить два списка</li>
+        <li>Получить по каждому штрафу статус оплаты</li>
+        <li>Вывести неоплаченные штрафы</li>
+    </ul>
+</section>
+
 <div class="progress">
     <div></div>
 </div>
