--- a/index.html
+++ b/index.html
@@ -318,7 +318,24 @@
 </section>
 
 <section class="slide">
-    <h2><small>Асинхронность.</small>Promises</h2>
+    <h2><small>Асинхронность.</small> Promisify</h2>
+    <pre class="javascript">
+        <code>function myPromisifyFunction(data) {</code>
+        <code>    var defer = new Vow.defer();</code>
+        <code>    myFunction(data, function (err, res) {</code>
+        <code>        if (err) {</code>
+        <code>            defer.reject(err);</code>
+        <code>        } else {</code>
+        <code>            defer.resolve(res);</code>
+        <code>        }</code>
+        <code>    });</code>
+        <code>    return defer.promise();</code>
+        <code>}</code>
+    </pre>
+</section>
+
+<section class="slide">
+    <h2><small>Асинхронность.</small> Promises</h2>
     <ul class="custom-list">
         <li class="fail">Накладные расходы</li>
         <li class="pending">Обработка ошибок
