Переписал на bluebird

--- a/index.html
+++ b/index.html
@@ -262,12 +262,10 @@
 
 <section class="slide">
     <h2><small>Асинхронность.</small> Задача</h2>
-    <h3>Количество неоплаченных штрафов</h3>
+    <h3>Список неоплаченных штрафов</h3>
     <ul>
-        <li>Ввести номер автомобиля и номер прав</li>
+        <li>Ввести номер автомобиля</li>
         <li>Получить по номеру автомобиля список штрафов</li>
-        <li>Получить по номеру прав список штрафов</li>
-        <li>Объединить два списка</li>
         <li>Получить по каждому штрафу статус оплаты</li>
         <li>Вывести неоплаченные штрафы</li>
     </ul>
